--- a/praw.ini
+++ b/praw.ini
@@ -20,8 +20,8 @@ reddit_url=https://www.reddit.com
 short_url=https://redd.it
 
 [bot]
-client_id=AeP4Ei2X_-TRPQ
-client_secret=zAOYhgzxjDw2qZq_3w3UEMo2cJs
-password=bottymcbotbot123!
+client_id=(Hidde)
+client_secret=(Hidden)
+password=(Hidden)
 username=bi-polar_bot
 user_agent=Bi-Polar_Bot
